--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centered Name </title>
+    <title>A Website</title>
     <style>
         body {
             display: flex;
@@ -12,15 +12,15 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #5a5a5a;
         }
         h1 {
             font-size: 3rem;
-            color: #333;
+            color: #ff0000;
         }
     </style>
 </head>
 <body>
-    <h1>My name is: Insert name here</h1>
+    <h1>My name is: Tigro-1305</h1>
 </body>
 </html>
