--- a/index.html
+++ b/index.html
@@ -22,5 +22,42 @@
 </head>
 <body>
     <h1>My name is: Student</h1>
+
+    <p>Upon taking a screenshot of the path and content within my ‘ArchOSC Assignment’,I then pasted 
+        the screenshot onto the software ‘Paint’ where I cropped it down to rid it of the unnecessary 
+        information (the contents of folders and quick access folders on the left of File Explorer) 
+        before saving the file under the name ‘Pictures_in_FIle_001’.
+    </p>
+    
+    <p>I then opened the terminal, running the command ‘git init’ to create a repository (empty) 
+        with in a folder of mine.
+    </p>
+
+    <p>
+        A repository was created for the empty once created locally within the system’s files.
+        <br>
+        After attempting to link the local repository with the online one on GitHub, 
+        I encountered a fatal error and had to grant access to myself in order to proceed. After 
+        doing this, I managed to successfully link the two.
+    </p>
+
+    <p>
+        Followed instructions and made a website.
+        <br>
+        After having fixed my initial mistake (I was attempting to save the repository onto the 
+        wrong place and so received a fatal error), I was able to not only save my changes, but 
+        also commit the changes on to the online repository.
+    </p>
+
+    <p>
+        Successfully saved and pushed the added times on local the repository to the online repository.
+        <br>
+        I updated the web page a little, renaming some aspects of it as well as well as changing other elements.
+        <br>
+        I committed a total of four changes tot the website and the pushed it onto github.
+    </p>
+    
+    <img src="PIctures/Pictures_in_FIle_001.png" alt="Pictures of File Explorer">
+
 </body>
 </html>
