--- a/index.html
+++ b/index.html
@@ -59,5 +59,12 @@
     
     <img src="PIctures/Pictures_in_FIle_001.png" alt="Pictures of File Explorer">
 
+    <p>
+        Using the terminal and, as a reasult, git, was incredibly useful as it demonstrating a method of
+        working with HTML that can also be used to carry out several commands to help with both Git and Visual Code.
+        <br>
+        Git would be incredibly useful to the industry as it allows for greater control over projects.
+    </p>
+
 </body>
 </html>
